fixed cors string

--- a/elasticsearch-1.7.2/config/elasticsearch.yml
+++ b/elasticsearch-1.7.2/config/elasticsearch.yml
@@ -1,4 +1,4 @@
-http.cors.allow-origin: *
+http.cors.allow-origin: "*"
 http.cors.enabled: true
 
 ##################### Elasticsearch Configuration Example #####################
